--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,38 @@
 }
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Almendra+Display&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+/* .almendra-display-regular {
+  font-family: "Almendra Display", serif;
+  font-weight: 400;
+  font-style: normal;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Almendra:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+/* .almendra-regular {
+  font-family: "Almendra", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.almendra-bold {
+  font-family: "Almendra", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.almendra-regular-italic {
+  font-family: "Almendra", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.almendra-bold-italic {
+  font-family: "Almendra", serif;
+  font-weight: 700;
+  font-style: italic;
+} */
+
 /*in root can put variables that can be used throughout the app*/
 :root {
   --color-primary: rgb(157, 102, 179);
@@ -91,9 +123,10 @@ h5 {
 }
 
 img {
-  display:block;
+  display: block;
   object-fit: cover;
   width: 100%;
+  border-radius: 25px;
 }
 
 section {
@@ -161,36 +194,39 @@ section {
 /*=================Navbar==================*/
 nav {
   width: 100%;
-  height: 6rem;
-  display: grid;
-  place-items: center;
-  background: rgb(244, 244, 218);
+  height: 8rem;
+  background: rgba(164, 235, 195, 0.418);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
-  border-bottom: 4px solid var(--color-bg);
+  border-bottom: 4px solid rgb(0, 17, 12);
   backdrop-filter: blur(20px);
 }
 
 .nav__container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   height: 100%;
   gap: 10rem;
 }
 
 .title {
+  font-family: "Almendra", serif;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
-  
+  color:rgb(0, 17, 12)
 }
 .nav__logo {
-  width:6rem;
+  width: 6rem;
   display: block;
+  margin-left: 5rem;
+  border-radius: 25px;
 }
 
 /* .nav__menu {
@@ -204,6 +240,64 @@ nav {
 }
 
 /*=================Home==================*/
+
+/*=================Posts==================*/
+.mushroom__picture {
+  padding-right: 4rem;
+}
+
+.mushroom {
+    background: var(--color-white);
+    padding: 4rem;
+    border-radius: var(--radius-4);
+    padding-bottom: 2rem;
+    transition: var(--transition);
+    cursor: default;
+    display: flex;
+    flex-direction: row;
+}
+
+.post:hover {
+    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.1);    
+}
+
+.post__thumbnail {
+    border-radius: var(--radius-3);
+    overflow: hidden;
+    height: 16rem;
+}
+
+.mushroom__content {
+    margin-top: 1.5rem;
+
+}
+
+.mushroom__content h3, h5 {
+    margin: 1rem 0 0.6rem;
+    display: flex;
+    flex-direction: row;
+}
+
+.post__footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 2rem;
+}
+
+.post__author {
+    display: flex;
+    gap: 1rem;
+    align-items: flex-start;
+}
+
+.post__author-avatar {
+    width: 2.5rem;
+    aspect-ratio: 1/1;
+    border-radius: var(--radius-2);
+    overflow: hidden;
+}
+
 /*=================Footer==================*/
 footer {
   background: var(--color-gray-900);
