--- a/src/index.css
+++ b/src/index.css
@@ -278,7 +278,7 @@ nav {
     flex-direction: row;
 }
 
-.post__footer {
+.mushroom__footer {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -297,6 +297,38 @@ nav {
     border-radius: var(--radius-2);
     overflow: hidden;
 }
+
+/*=================Post Detail==================*/
+.post-detail {
+  width: var(--form-width);
+  background: var(--color-white);
+  margin-inline: auto;
+  padding: 2rem 0;
+}
+
+.post-detail__header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom:  1.5rem;
+}
+
+.post-detail__buttons {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.post-detail__thumbnail {
+  margin: 1rem 0;
+  height: fit-content;
+  max-height: 30rem;
+  overflow: hidden;
+}
+
+.post-detail p {
+  margin-bottom: 0.7rem;
+}
+
 
 /*=================Footer==================*/
 footer {
