--- a/src/index.css
+++ b/src/index.css
@@ -106,21 +106,20 @@ h1 {
   font-weight: 400;
 }
 
-/* h2 {
-  font-family: "Almendra Display", serif;
+h2 {
   font-size: 3rem;
   font-weight: 400;
-} */
+}
 
-/* .h2:hover {
-  background: rebeccapurple;
-  color: rebeccapurple;
-} */
+.h2:hover {
+  background: rgb(223, 64, 6);
+  color: rgb(210, 52, 8);
+}
 
 h3 {
-  font-family: "Almendra Display", serif;
   font-size: 2rem;
   line-height: 1.25;
+  font-weight: 400;
 }
 
 h4 {
@@ -132,6 +131,7 @@ h5 {
 }
 
 p {
+  font-family: "Montserrat", sans-serif;
   font-size: larger;
   padding-top: 1rem;
 }
@@ -155,42 +155,24 @@ section {
 
 .btn {
   display: inline-block;
-  width:fit-content;
+  width: fit-content;
   /* series means hight first then width */
   padding: 0.5rem 1rem;
   border-radius: var(--radius-2);
-  background: var(--color-white);
-  font-weight: 500;
   cursor: pointer;
   transition: var(--transition);
+  border-width: 0.5rem;
+  border-color: rgb(4, 88, 39);
+  border-style: groove;
+  background: rgb(191, 166, 244);
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 400; 
 }
 
-.btn.primary {
-  background: var(--color-primary);
-  color: var(--color-white);
-}
-
-.btn.category {
-  background: var(--color-bg);
-  color: var(--color-primary);
-  font-size: 0.75rem;
-  font-weight: 400;
-}
-
-.btn.sm {
-  font-size: 0.8rem;
-  padding: 0.3rem 0.7rem;
-  font-weight: 400;
-  margin: 0.5rem;
-}
-
-.btn.danger {
-  background: var(--color-red);
-  color: var(--color-white)
-}
 
 .btn:hover {
-  background: var(--color-gray-900);
+  background: rgb(79, 3, 145);
   color: var(--color-white)
 }
 
@@ -294,6 +276,12 @@ nav {
   padding: 2rem;
 }
 
+.mushroom-detail h1 {
+  display: flex;
+  justify-content: center;
+  text-decoration-line: underline;
+}
+
 .mushroom-detail__block {
   display: flex;
   justify-content: center;
@@ -301,21 +289,9 @@ nav {
   flex-direction: row;
 }
 
-.post-detail__buttons {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
-/* .post-detail__thumbnail {
-  margin: 1rem 0;
-  height: fit-content;
-  max-height: 30rem;
-  overflow: hidden;
-} */
-
-.post-detail p {
-  margin-bottom: 0.7rem;
+.mushroom-content-block {
+  margin-top: 0rem;
+  max-width: 50%;
 }
 
 
@@ -363,18 +339,16 @@ footer {
   }
   
   h1 {
+    font-size: 4rem;
+    font-weight: 400;
+  }
+  
+  h2 {
     font-size: 3rem;
     font-weight: 400;
   }
   
-  /* h2 {
-    font-family: "Almendra Display", serif;
-    font-size: 3rem;
-    font-weight: 400;
-  } */
-  
   h3 {
-    font-family: "Almendra Display", serif;
     font-size: 2rem;
     line-height: 1.25;
   }
@@ -409,7 +383,7 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 0rem;
+    gap: 2rem;
   }
 
   .title {
@@ -429,9 +403,23 @@ footer {
   .mushroom__picture {
     padding-right: 0rem;
   }
+
   .mushroom__content {
     margin-top: 1.5rem;
     max-width: 100%;
+  }
+
+  /* Mushroom Detail */
+  .mushroom-detail__block {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1.5rem;
+    flex-direction: column;
+  }
+
+  .mushroom-content-block {
+    margin-top: 1.5rem;
+    max-width: fit-content;
   }
 
 
